# triplestream

./: .gitignore  README.md  prefect.yaml  pyproject.toml
config/pipelines/: imdb.toml
config/shapes/: imdb.toml
data/staging/imdb/b5787408c759d37a/: manifest.json
data/staging/imdb/b5787408c759d37a/graphs/: layout.json
ontology/core/: core-properties.ttl  core.ttl
ontology/domain/imdb/: imdb-properties.ttl  imdb.ttl
ontology/domain/imdb/vocab/: genres-skos.ttl  roles-skos.ttl
ontology/platform/: platform.ttl
ontology/platform/pipeline/: pipeline.ttl
rules/imdb/: title-inference.rules.ttl
shapes/: imdb-data-quality.shapes.ttl  imdb-roles.shapes.ttl
shapes/domain/imdb/: data-quality.shapes.ttl  vocab-schemes.shapes.ttl
src/triplestream/: __init__.py  paths.py
src/triplestream/entity/: __init__.py  uris.py
src/triplestream/graphs/: __init__.py  layout.py
src/triplestream/lineage/: __init__.py  context.py  emit.py  store.py  trig_format.py  uris.py
src/triplestream/materialize/: __init__.py  imdb.py  nq.py  runner.py
src/triplestream/ottr/: __init__.py  loader.py  registry.py
src/triplestream/pipelines/imdb/: cli.py  flow.py  graph_tasks.py  ingest_tasks.py  materialize_tasks.py  ottr_tasks.py  scope.py  subflows.py  validate_tasks.py
src/triplestream/sources/: __init__.py  imdb.py
src/triplestream/staging/: __init__.py  fingerprint.py
src/triplestream/validation/: __init__.py  pyshacl_runner.py  registry.py
templates/: name.basics.stottr  title.akas.stottr  title.basics.stottr  title.episode.stottr  title.ratings.stottr
(+37 files in other folders)
